--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puertas y Ventanas H&G</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>PUERTAS Y VENTANAS H&G</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
@@ -24,7 +24,6 @@
     <section id="productos">
         <h2>Catálogo de Productos</h2>
         <div class="galeria">
-            <!-- Productos: Puedes duplicar este bloque para más artículos -->
             <div class="producto">
                 <img src="assets/ejemplo1.jpg" alt="Producto 1">
                 <h3>Nombre del Producto</h3>
@@ -39,8 +38,12 @@
         <p><strong>Teléfonos:</strong> 849-857-1067 / 809-653-8180</p>
         <p><strong>Email:</strong> hgpuertasyventanas@gmail.com</p>
         <div class="redes">
-            <a href="https://facebook.com/" target="_blank">Facebook</a>
-            <a href="https://instagram.com/" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/hgpuertasyventanas" target="_blank">
+                <img src="assets/facebook.svg" alt="Facebook" width="40">
+            </a>
+            <a href="https://www.instagram.com/hgpuertasyventanas" target="_blank">
+                <img src="assets/instagram.svg" alt="Instagram" width="40">
+            </a>
         </div>
     </section>
 
