--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <p><strong>Teléfonos:</strong> 849-857-1067 / 809-653-8180</p>
         <p><strong>Email:</strong> hgpuertasyventanas@gmail.com</p>
         <div class="redes">
-            <a href="https://www.facebook.com/hgpuertasyventanas" target="_blank">
+            <a href="https://www.facebook.com/https://profile.php?id=61578048667503" target="_blank">
                 <img src="assets/facebook.svg" alt="Facebook" width="40">
             </a>
-            <a href="https://www.instagram.com/hgpuertasyventanas" target="_blank">
+            <a href="https://www.instagram.com/https://www.instagram.com/hg1_2024?fbclid=IwY2xjawLbDehleHRuA2FlbQIxMABicmlkETF2eVQ5R3l4bm5sWldXejJIAR63mHBKpxPQDA5VDGKONMWH3stY1n4OINXNCL9LCFx7EEmlcIDUBYqgFCD4lw_aem_-GKAlxscf5Y7vc2mjhPofQ" target="_blank">
                 <img src="assets/instagram.svg" alt="Instagram" width="40">
             </a>
         </div>
